k9s/blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi
      version: blue
  template:
    metadata:
      labels:
        app: fastapi
        version: blue
    spec:
      containers:
        - name: fastapi
          image: fastapi-app:v2
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
