k9s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: fastapi-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: fastapi-app:v1
          imagePullPolicy: Never  
          ports:
            - containerPort: 8000

          volumeMounts:
            - name: storage
              mountPath: /data
          
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: pvc-data
