k9s/green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi
      version: green
  template:
    metadata:
      labels:
        app: fastapi
        version: green
    spec:
      containers:
        - name: fastapi
          image: fastapi-app:v3
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
