k9s/hpa-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: fastapi

spec:
  replicas: 2

  selector:
    matchLabels:
      app: fastapi

  template:
    metadata:
      labels:
        app: fastapi

    spec:
      containers:
      - name: fastapi
        image: fastapi-app:v6

        ports:
        - containerPort: 8000

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"
