k9s/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: prometheus

spec:
  replicas: 1

  selector:
    matchLabels:
      app: prometheus

  template:
    metadata:
      labels:
        app: prometheus

    spec:
      containers:
      - name: prometheus

        image: prom/prometheus

        args:
          - "--config.file=/etc/prometheus/prometheus.yml"

        ports:
          - containerPort: 9090

        volumeMounts:
          - name: config
            mountPath: /etc/prometheus

      volumes:
      - name: config
        configMap:
          name: prometheus-config
