k9s/quota_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
  namespace: prod

spec:
  replicas: 2

  selector:
    matchLabels:
      app: fastapi

  template:
    metadata:
      labels:
        app: fastapi

    spec:
      containers:
      - name: fastapi
        image: fastapi-app:v2

        ports:
        - containerPort: 8000

        resources:
          requests:
            cpu: "200m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "256Mi"
