k9s/security_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: prod

spec:
  replicas: 2

  selector:
    matchLabels:
      app: fastapi

  template:
    metadata:
      labels:
        app: fastapi

    spec:
      serviceAccountName: app-sa

      containers:
      - name: fastapi
        image: fastapi-app:v2
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
