k9s/Prod_Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: prod

spec:
  selector:
    app: fastapi

  ports:
  - port: 80
    targetPort: 8000

  type: ClusterIP
