k9s/service-blue-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi
    version: green  
  ports:
    - port: 80
      targetPort: 8000
